# qmk_rgb_hid

./: CMakeLists.txt
.github/workflows/: cmake_build_release.yml
include/: color_utils.h  hid_utils.h
src/: color_utils.cpp  hid_utils.cpp  main.cpp
